--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/asgardian",
+  "name": "@nordic-ui/asgardian",
   "version": "0.0.0",
   "author": "Kevin Østerkilde <kevin@oesterkilde.dk>",
   "main": "dist/index.cjs.js",
@@ -17,7 +17,11 @@
   },
   "keywords": [
     "asgardian",
-    "authentication"
+    "authorization",
+    "auth",
+    "authz",
+    "ability",
+    "acl"
   ],
   "publishConfig": {
     "access": "public"
@@ -27,6 +31,14 @@
   "files": [
     "dist/**"
   ],
+  "tsup": {
+    "entry": [
+      "src/ability.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true
+  },
   "prettier": {
     "semi": false,
     "printWidth": 100,
