--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "next": "^15.1.0",
+    "nextra": "^4.2.16",
+    "nextra-theme-docs": "^4.2.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
