--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,7 +11,6 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
     "next": "^15.1.0",
     "nextra": "^4.2.16",
     "nextra-theme-docs": "^4.2.16",
@@ -19,8 +18,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@nordic-ui/eslint-config": "workspace:*",
+    "@nordic-ui/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
