feat(asgardian): update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@nordic-ui/asgardian",
+  "description": "A simple authorization library",
   "version": "0.0.1",
-  "private": false,
+  "author": "Kevin Østerkilde <kevin@oesterkilde.dk>",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "keywords": [
+    "validation",
+    "validator",
+    "schema validation"
+  ],
+  "files": [
+    "dist/**"
+  ],
+  "license": "MIT",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -17,5 +30,10 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "prettier": {
+    "semi": false,
+    "printWidth": 100,
+    "singleQuote": true
   }
 }
