feat(asgardian): export operators

--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -32,7 +32,7 @@
   ],
   "tsup": {
     "entry": [
-      "src/ability.ts"
+      "src/index.ts"
     ],
     "splitting": false,
     "sourcemap": true,
