--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "turbo dev",
     "test": "turbo test",
     "lint": "turbo lint",
+    "type-check": "turbo type-check",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
