--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "turbo dev",
     "test": "turbo test",
     "lint": "turbo lint",
+    "type-check": "turbo type-check",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "prettier": "^3.2.5",
-    "turbo": "^2.4.4",
+    "turbo": "^2.5.2",
     "typescript": "5.5.4"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@9.13.2",
   "engines": {
     "node": ">=18"
   }
