--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "asgardian-mono",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo build",
+    "build:lib": "turbo run build --filter=@nordic-ui/asgardian",
+    "build:docs": "turbo run build --filter=docs",
     "dev": "turbo dev",
     "test": "turbo test",
     "lint": "turbo lint",
