--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nordic-ui/asgardian",
   "version": "0.1.0",
+  "description": "A simple authorization library",
   "author": "Kevin Østerkilde <kevin@oesterkilde.dk>",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -21,7 +22,8 @@
     "auth",
     "authz",
     "ability",
-    "acl"
+    "acl",
+    "rbac"
   ],
   "publishConfig": {
     "access": "public"
@@ -30,14 +32,6 @@
   "files": [
     "dist/**"
   ],
-  "tsup": {
-    "entry": [
-      "src/index.ts"
-    ],
-    "splitting": false,
-    "sourcemap": true,
-    "clean": true
-  },
   "prettier": {
     "semi": false,
     "printWidth": 100,
@@ -50,5 +44,6 @@
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.1.2"
-  }
+  },
+  "dependencies": {}
 }
