--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -11,6 +11,7 @@
     "dev": "tsup --watch",
     "test": "vitest run --passWithNoTests --reporter verbose --typecheck",
     "test:watch": "vitest watch --passWithNoTests --reporter verbose --typecheck",
+    "test:coverage": "NODE_NO_WARNINGS=1 vitest run --passWithNoTests --coverage",
     "lint": "eslint \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
     "diagnostics": "tsc --diagnostics",
@@ -40,10 +41,10 @@
   "devDependencies": {
     "@nordic-ui/typescript-config": "workspace:*",
     "@types/node": "^20",
+    "@vitest/coverage-v8": "3.1.2",
     "tsup": "^7.1.0",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.1.2"
-  },
-  "dependencies": {}
+  }
 }
