--- a/packages/asgardian-react/package.json
+++ b/packages/asgardian-react/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint src --max-warnings 0",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "NODE_NO_WARNINGS=1 vitest run --coverage",
@@ -45,7 +45,7 @@
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "3.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.15.0",
     "jsdom": "^26.1.0",
     "tsup": "^8.0.2",
     "typescript": "5.5.4",
