--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -39,6 +39,7 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@nordic-ui/eslint-config": "workspace:*",
     "@nordic-ui/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@vitest/coverage-v8": "3.1.2",
