--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,6 +6,7 @@
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
+    "./react": "./react.js",
     "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
