--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           CI: true
         run: |
+          pnpm build
           pnpm lint
           pnpm test
           pnpm type-check
