chore: Configure turbo

--- a/packages/asgardian-react/package.json
+++ b/packages/asgardian-react/package.json
@@ -63,6 +63,14 @@
     "react-dom": "^18.2.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "typesVersions": {
+      "*": {
+        "*": [
+          "dist/*.d.ts",
+          "dist/*/index.d.ts"
+        ]
+      }
+    }
   }
 }
