--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -34,15 +34,7 @@
     "rbac"
   ],
   "publishConfig": {
-    "access": "public",
-    "typesVersions": {
-      "*": {
-        "*": [
-          "dist/*.d.ts",
-          "dist/*/index.d.ts"
-        ]
-      }
-    }
+    "access": "public"
   },
   "license": "MIT",
   "files": [
@@ -59,7 +51,7 @@
     "@types/node": "^20",
     "@vitest/coverage-v8": "3.1.2",
     "tsup": "^7.1.0",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.1.2"
   }
