--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -5,6 +5,7 @@ on: push
 jobs:
   linting-and-testing:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       matrix:
         node-version: [18]
@@ -21,6 +22,10 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: Build
+        env:
+          CI: true
+        run: pnpm build
       - name: Linting & testing
         env:
           CI: true
