--- a/packages/asgardian/package.json
+++ b/packages/asgardian/package.json
@@ -6,6 +6,13 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
+    }
+  },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
@@ -39,11 +46,12 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@nordic-ui/eslint-config": "workspace:*",
     "@nordic-ui/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@vitest/coverage-v8": "3.1.2",
     "tsup": "^7.1.0",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.1.2"
   }
